--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,9 @@
     "angular-local-storage": "~0.1.5",
     "angular-filter": "~0.5.1"
   },
+  "devDependencies": {
+    "angular-mocks": "~1.3.0",
+    "angular-scenario": "~1.3.0"
+  },
   "appPath": "app"
 }
